Theme: Polls overlap fix, compiled files, submit button classes

--- a/docroot/sites/all/themes/opensource/sass/partials/polls/_polls-base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/polls/_polls-base.scss
@@ -33,7 +33,7 @@
         top: -2em;
     }
 
-    .submit {
+    .form-submit {
         float: left;
     }
 }
